# wmtk

./: AUTHORS  CriticNetwork.cpp  CriticNetwork.h  LICENSE  Makefile  Makefile.in  README.md  WCST.cpp  WCST.h  WMtk.h  WorkingMemory.cpp  WorkingMemory.h  complex-test.cpp  complex_test_results_01.csv  configure.ac  main.cpp  results.csv  results.ods  td_hrr_1d_wm_1stage.cpp  td_hrr_wm_colors.r  td_noq_hrr_1d_wm.cpp  td_q_hrr_1d_wm.cpp  temp.cpp  test.cpp  testing.sh  wcst_manual.cpp  wcst_wm.cpp  wcst_wm_testC.cpp  wmtest.cpp
.old/: config.h.in  configure
.old/src/: AggregateFeatureVector.cpp  AggregateFeatureVector.h  ChunkFeatureVector.cpp  Makefile.in  WorkingMemory.cpp  WorkingMemory.h  bp_full_forward_projection.cpp  bp_full_forward_projection.h  full_forward_projection.h  layer.cpp  layer.h  linear_activation_function.cpp  linear_activation_function.h  neural_unit.cpp  projection.h  simple_activation_function.cpp  simple_activation_function.h  td_layer.cpp  td_layer.h  uniform_random_number_generator.cpp
doc/: Makefile.am  Makefile.in
hrr/: Makefile  hrrOperators.cpp  hrrOperators.h  hrrengine.cpp  hrrengine.h  main.cpp  operators.cpp
src/: ActorNetwork.h  AggregateFeatureVector.cpp  Chunk.cpp  Chunk.h  ChunkFeatureVector.h  CriticNetwork.cpp  CriticNetwork.h  FeatureVector.cpp  FeatureVector.h  Makefile.am  StateFeatureVector.cpp  StateFeatureVector.h  WMtk.h  WorkingMemory.cpp  activation_function.cpp  activation_function.h  bp_full_forward_projection.cpp  full_forward_projection.cpp  index_permuter.cpp  index_permuter.h  layer.cpp  linear_activation_function.cpp  neural_unit.cpp  neural_unit.h  nnet_math.cpp  nnet_math.h  nnet_object.cpp  nnet_object.h  projection.cpp  random_number_generator.cpp  random_number_generator.h  simple_activation_function.cpp  simple_linear_activation_function.cpp  simple_linear_activation_function.h  td_full_forward_projection.cpp  td_full_forward_projection.h  td_layer.cpp  uniform_random_number_generator.cpp  uniform_random_number_generator.h
