SUBDIRS = .

lib_LTLIBRARIES = libWMtk.la

pkginclude_HEADERS = ActorNetwork.h \
		AggregateFeatureVector.h \
		ChunkFeatureVector.h \
		Chunk.h \
		CriticNetwork.h \
		FeatureVector.h \
		StateFeatureVector.h \
		WMtk.h \
		WorkingMemory.h

libWMtk_la_SOURCES = activation_function.cpp \
		activation_function.h \
		ActorNetwork.h \
		AggregateFeatureVector.cpp \
		AggregateFeatureVector.h \
		bp_full_forward_projection.cpp \
		bp_full_forward_projection.h \
		Chunk.cpp \
		ChunkFeatureVector.cpp \
		ChunkFeatureVector.h \
		Chunk.h \
		CriticNetwork.cpp \
		CriticNetwork.h \
		FeatureVector.cpp \
		FeatureVector.h \
		full_forward_projection.cpp \
		full_forward_projection.h \
		index_permuter.cpp \
		index_permuter.h \
		layer.cpp \
		layer.h \
		linear_activation_function.cpp \
		linear_activation_function.h \
		neural_unit.cpp \
		neural_unit.h \
		nnet_math.cpp \
		nnet_math.h \
		nnet_object.cpp \
		nnet_object.h \
		projection.cpp \
		projection.h \
		random_number_generator.cpp \
		random_number_generator.h \
		simple_activation_function.cpp \
		simple_activation_function.h \
		simple_linear_activation_function.cpp \
		simple_linear_activation_function.h \
		StateFeatureVector.cpp \
		StateFeatureVector.h \
		td_full_forward_projection.cpp \
		td_full_forward_projection.h \
		td_layer.cpp \
		td_layer.h \
		uniform_random_number_generator.cpp \
		uniform_random_number_generator.h \
		WMtk.h \
		WorkingMemory.cpp \
		WorkingMemory.h

